# C-Game

./: .gitignore  CMakeLists.txt  cards.txt
SFML_Files/: install.txt
src/: CMakeLists.txt  main.cpp  main.hpp
src/ECS/Components/: ComponentFactory.cpp  ComponentFactory.hpp  ComponentRegistry.hpp  ComponentStorage.hpp  ComponentTypeID.cpp  ComponentTypeID.hpp  Components.hpp
src/ECS/Core/: Core.cpp  Core.hpp
src/ECS/Dynamic_Libraries/: DeleteDL.hpp  DynamicLibrary.cpp  DynamicLibrary.hpp
src/ECS/Entities/: Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/ECS/Graphical/: Graphical.hpp  IGraphical.hpp  SFMLGraphical.cpp  SFMLGraphical.hpp  SFMLInput.cpp  SFMLRenderer.cpp
src/ECS/JSONParser/: JSONComponentParser.cpp  JSONComponentParser.hpp  JSONStorage.hpp
src/ECS/Network/Client/: Client.cpp  Client.hpp
src/ECS/Network/Host/: Host.cpp  Host.hpp
src/ECS/Scene_Manager/: AScene.hpp  IScene.hpp  ScenesManager.hpp
src/ECS/SpawnerParser/: SpawnerParser.cpp  SpawnerParser.hpp
src/ECS/System_Handling/: System.hpp  SystemManager.hpp
src/ECS/Systems/: ClickSystem.hpp  CollisionsSystem.hpp  InputSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  SpawnerSystem.hpp
src/ECS/Timer/: Timer.hpp
src/ECS/Workspace/: Worpspace.hpp
src/Game/CardStack/: CardStack.cpp  CardStack.hpp
src/Game/Uno/: Game.cpp  Setup.cpp  Uno.cpp  Uno.hpp
src/Workspace/: Worpspace.cpp  Worpspace.hpp
